src/objects/Custom_Related_case__c.object
<CustomObject>
    <fields>
        <fullName>Master_Case__c</fullName>
        <label>Master Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>R00N20000000pOWgEAM</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Parent_Case_Number__c</fullName>
        <description>Equals to the Case Number of Master Case</description>
        <formula>Master_Case__r.CaseNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Case Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Case_Record_Type__c</fullName>
        <description>Equals to the Record Type of Master Case</description>
        <formula>Master_Case__r.RecordTypeId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Case Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>R00N20000000pOWvEAM</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Custom Related case</label>
    <nameField>
        <displayFormat>RC-{00000}</displayFormat>
        <label>Custom Related case Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Related cases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>